--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-native-svg": "9.13.3",
     "react-native-web": "~0.11.7",
     "rxjs": "^6.5.4",
-    "shortid": "^2.2.15",
-    "uuid": "^7.0.2"
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
