--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-svg": "9.13.3",
+    "react-native-swipe-list-view": "^2.3.0",
     "react-native-web": "~0.11.7",
     "rxjs": "^6.5.4",
     "shortid": "^2.2.15"
