--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.8",
     "expo": "~36.0.0",
+    "expo-google-app-auth": "^8.1.0",
+    "firebase": "^7.13.1",
     "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
