--- a/package.json
+++ b/package.json
@@ -5,27 +5,41 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "xcode": "open ios/vocabularybuilder.xcworkspace"
   },
   "dependencies": {
-    "expo": "~37.0.3",
-    "expo-updates": "~0.1.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "~0.61.5",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-screens": "~2.2.0",
-    "react-native-unimodules": "~0.9.0",
-    "react-native-web": "~0.11.7"
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/bottom-tabs": "^5.2.6",
+    "@react-navigation/native": "^5.1.5",
+    "@react-navigation/stack": "^5.2.10",
+    "expo": "^37.0.6",
+    "expo-google-app-auth": "^8.1.0",
+    "expo-updates": "^0.1.1",
+    "firebase": "^7.13.2",
+    "lottie-ios": "3.1.3",
+    "lottie-react-native": "^3.3.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-native": "^0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
+    "react-native-svg": "^12.0.3",
+    "react-native-swipe-list-view": "^2.5.0",
+    "react-native-unimodules": "^0.9.0",
+    "react-native-web": "^0.12.2",
+    "rxjs": "^6.5.5",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.23",
-    "babel-preset-expo": "~8.1.0",
-    "jest-expo": "~37.0.0",
-    "typescript": "~3.8.3"
+    "@babel/core": "^7.9.0",
+    "@types/react": "^16.9.33",
+    "@types/react-native": "^0.62.2",
+    "babel-preset-expo": "^8.1.0",
+    "jest-expo": "^37.0.0",
+    "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "react-native"
