build: run prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,9 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true
-  }
+  },
+  "exclude": [
+    "__tests__/**/*.test.ts",
+    "__tests__/**/*.test.tsx"
+  ]
 }
