--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "web": "expo start --web",
     "start": "react-native start",
     "test": "jest",
-    "xcode": "open ios/vocabularybuilder.xcworkspace"
+    "xcode": "open ios/vocabularybuilder.xcworkspace",
+    "prettier:write": "npx prettier --write **/*.{js,jsx,ts,tsx,json} && npx prettier --write *.{js,jsx,ts,tsx,json}",
+    "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
@@ -37,8 +39,16 @@
     "@babel/core": "^7.9.0",
     "@types/react": "^16.9.33",
     "@types/react-native": "^0.62.2",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
     "babel-preset-expo": "^8.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
     "jest-expo": "^37.0.0",
+    "prettier": "^2.0.4",
     "typescript": "^3.8.3"
   },
   "jest": {
