--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^5.2.6",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
+    "@sentry/react-native": "^1.3.7",
     "expo": "^37.0.6",
     "expo-google-app-auth": "^8.1.0",
     "expo-updates": "^0.1.1",
