--- a/package.json
+++ b/package.json
@@ -11,47 +11,47 @@
     "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.7",
-    "@react-navigation/bottom-tabs": "^5.2.6",
-    "@react-navigation/native": "^5.1.5",
-    "@react-navigation/stack": "^5.2.10",
-    "@sentry/react-native": "^1.3.7",
-    "expo": "^37.0.6",
-    "expo-google-app-auth": "^8.1.0",
-    "expo-updates": "^0.1.1",
-    "firebase": "^7.13.2",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.7.1",
+    "@react-navigation/native": "^5.7.0",
+    "@react-navigation/stack": "^5.7.0",
+    "@sentry/react-native": "^1.6.2",
+    "expo": "^38.0.0",
+    "expo-google-app-auth": "^8.1.2",
+    "expo-updates": "~0.2.8",
+    "firebase": "7.9.0",
     "lottie-ios": "3.1.3",
-    "lottie-react-native": "^3.3.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-native": "^0.62.2",
-    "react-native-gesture-handler": "^1.6.1",
-    "react-native-reanimated": "^1.8.0",
-    "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.4.0",
-    "react-native-svg": "^12.0.3",
-    "react-native-swipe-list-view": "^2.5.0",
-    "react-native-unimodules": "^0.9.0",
-    "react-native-web": "^0.12.2",
-    "rxjs": "^6.5.5",
+    "lottie-react-native": "^3.4.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "0.62.2",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
+    "react-native-swipe-list-view": "^3.1.3",
+    "react-native-unimodules": "~0.10.1",
+    "react-native-web": "~0.11.7",
+    "rxjs": "^6.6.0",
     "shortid": "^2.2.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@react-native-community/eslint-config": "^1.0.0",
-    "@types/react": "^16.9.33",
-    "@types/react-native": "^0.62.2",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
-    "babel-preset-expo": "^8.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "jest-expo": "^37.0.0",
-    "prettier": "^2.0.4",
-    "typescript": "^3.8.3"
+    "@babel/core": "^7.10.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "babel-preset-expo": "^8.2.3",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "jest-expo": "^38.0.0",
+    "prettier": "^2.0.5",
+    "typescript": "~3.9.5"
   },
   "jest": {
     "preset": "react-native"
