--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/bottom-tabs": "^5.7.1",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
-    "@sentry/react-native": "^1.6.2",
     "expo": "^38.0.0",
     "expo-google-app-auth": "^8.1.2",
     "expo-updates": "~0.2.8",
@@ -34,6 +33,7 @@
     "react-native-unimodules": "~0.10.1",
     "react-native-web": "~0.11.7",
     "rxjs": "^6.6.0",
+    "sentry-expo": "^2.1.2",
     "shortid": "^2.2.15"
   },
   "devDependencies": {
