--- a/ios/vocabularybuilder/Info.plist
+++ b/ios/vocabularybuilder/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>vocabularybuilder</string>
+	<string>Vocabulary Builder</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -37,44 +37,22 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSCalendarsUsageDescription</key>
-	<string>Allow vocabularybuilder to access your calendar</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Allow vocabularybuilder to use the camera</string>
-	<key>NSContactsUsageDescription</key>
-	<string>Allow vocabularybuilder experiences to access your contacts</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Allow vocabularybuilder to use your location</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Allow vocabularybuilder to use your location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Allow vocabularybuilder to use your location</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Allow vocabularybuilder to access your microphone</string>
-	<key>NSMotionUsageDescription</key>
-	<string>Allow vocabularybuilder to access your device's accelerometer</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Give vocabularybuilder periences permission to save photos</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Give vocabularybuilder periences permission to access your photos</string>
-	<key>NSRemindersUsageDescription</key>
-	<string>Allow vocabularybuilder to access your reminders</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>fetch</string>
-		<string>remote-notification</string>
-	</array>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
-	<string>SplashScreen</string>
-	<key>UIMainStoryboardFile</key>
 	<string>SplashScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDefault</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
