--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -11,33 +10,38 @@
     "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "dependencies": {
+    "expo": "^38.0.0",
+    "expo-splash-screen": "~0.4.0",
+    "expo-status-bar": "^1.0.0",
+    "expo-updates": "~0.2.10",
+    "react": "~16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "~0.62.2",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-screens": "~2.9.0",
+    "react-native-unimodules": "~0.10.1",
+    "react-native-web": "~0.11.7",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.1",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
-    "expo": "^38.0.0",
     "expo-google-app-auth": "^8.1.2",
-    "expo-updates": "~0.2.8",
     "firebase": "7.9.0",
     "lottie-ios": "3.1.3",
     "lottie-react-native": "^3.4.0",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-native": "0.62.2",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
     "react-native-swipe-list-view": "^3.1.3",
-    "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7",
     "rxjs": "^6.6.0",
     "sentry-expo": "^2.1.2",
     "shortid": "^2.2.15"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
+    "babel-jest": "~25.2.6",
+    "jest": "~25.2.6",
+    "react-test-renderer": "~16.11.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
@@ -56,5 +60,7 @@
   "jest": {
     "preset": "react-native"
   },
-  "private": true
+  "private": true,
+  "name": "vocabulary-builder",
+  "version": "1.0.0"
 }
