feat: finish the icon and image for splashscreen

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "web": "expo start --web",
     "start": "react-native start",
     "test": "jest",
-    "xcode": "open ios/vocabularybuilder.xcworkspace",
+    "xcode": "open ios/VocabularyBuilder.xcworkspace",
     "prettier:write": "npx prettier --write **/*.{js,jsx,ts,tsx,json} && npx prettier --write *.{js,jsx,ts,tsx,json}",
     "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
   },
